# debug

./: .gitignore  CLAUDE.md  NEXT_STEPS.md  README.md  debug.code-workspace  interactive_causal_exploration.py  pyproject.toml  run_viz_batch.sh  seed_results.txt
.claude/: settings.local.json
experiments/: 02_tracking_visualizations.py  11_test_rng_seeds.py  README.md  REFACTORING_SUMMARY.md  _.py  _01_gpt_entity_tracking.py  _02_commercial_entity_tracking.py  _02_entity_tracking_simple.py  _02_opensource_entity_tracking.py  _02_run_seq_len_experiments.sh  _02_tracking_visualizations.py  _03_collect_correct_pairs.py  _03_counterfactual_simple.py  _04_boolean_experiment.py  _04_boolean_simple.py  _04_boolean_visualizations.py  _04_run_boolean_experiments.sh  _05_02_all_range_tracking.sh  _05_range_tracking.py  _05_range_tracking_safe_read.py  _05_range_tracking_simple.py  _05_range_tracking_visualizations.py  _05_run_range_tracking_experiments.sh  _06_code_tracking.py  _07_binding_patching.py  _07_query_hops_analysis.py  _07_query_hops_results_analysis.py  _07_variable_binding.py  _08_full_layer_token_patching.py  _09_attention_token_patching.py  _09_visualize_patching.py  _09_visualize_patching_auto.py  _10_attention_token_patching.py  _10_attention_token_visualization.py  _10_visualize_attention_patching.py  _11_attention_pattern_knockout.py  _11_visualize_attention_knockout.py  _12_mlp_token_patching.py  _12_visualize_mlp_patching.py  _13_test_pointer.py  (+10 more)
results/: NTQAI_Nxcode-CQ-7B-orpo_data.json  Qwen_CodeQwen1.5-7B-Chat_data.json  Qwen_Qwen2.5-14B_data.json  (+14 more)
(+1152 files in other folders)
